# phorj

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  GOVERNANCE.md  KNOWN_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  SEMVER.md  STABILITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  VISION.md  rust-toolchain.toml
.claude/: settings.json
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  playground.yml  release.yml  stub-registry.yml
bench/: baseline.json  micro-baseline.json
bench/micro/: closurecall.phg  closurecall.php  dbwork.phg  dbwork.php  deepjson.phg  deepjson.php  enum.phg  enum.php  fibrec.phg  fibrec.php  floatarith.phg  floatarith.php  floatloop.phg  floatloop.php  floatmul.phg  floatmul.php  forin.phg  forin.php  hofpipe.phg  hofpipe.php  intadd.phg  intadd.php  interp.phg  interp.php  isemail.phg  isemail.php  isurl.phg  isurl.php  jsonround.phg  jsonround.php  listappend.phg  listappend.php  listcontains.phg  listcontains.php  listfilter.phg  listfilter.php  listindex.phg  listindex.php  listmap.phg  listmap.php  (+60 more)
conformance/: README.md
conformance/collections/: list-query.phg  list.out  list.phg  map.out  map.phg  set-map-ergonomics.out  set-map-ergonomics.phg  set.out  set.phg
conformance/ddd/: expected.out  phorge.toml
conformance/diagnostics/: duplicate-enum-variant.phg  duplicate-static-field.phg  duplicate-type.expected  duplicate-type.phg  injected-variant-bare.expected  injected-variant-bare.phg  new-required.expected  new-required.phg  override-return-sig.expected  override-return-sig.phg  static-field-visibility.phg  static-method-via-instance.expected  static-method-via-instance.phg  type-arg-count.phg
conformance/errors/: lambda-in-ctor.out  lambda-in-ctor.phg  try-catch.out  try-catch.phg
conformance/lang/: arithmetic.out  arithmetic.phg  bytes.out  bytes.phg  control-flow.out  control-flow.phg  ctor-defaults.out  ctor-defaults.phg  decimal.out  decimal.phg  destructuring.out  destructuring.phg  dump.out  dump.phg  foreach.phg  functions.out  functions.phg  loops.phg  native-operand.phg  optionals.out  optionals.phg  ranges.phg  strings.out  strings.phg  text-blocks.phg  type-aliases.phg
conformance/stdlib/: dates.phg  datetimes.phg  math-text.out  math-text.phg  text-breadth.phg  time.out  time.phg
conformance/types/: classes.out  classes.phg  enums-match.out  enums-match.phg  fixed-lists.phg  generic-enums.out  generic-enums.phg  generics.out  generics.phg  inheritance.out  inheritance.phg  interfaces.out  interfaces.phg  intersections.phg  overloading.out  overloading.phg  property-hooks.phg  statics.out  statics.phg  traits.out  traits.phg  unions.phg  visibility.phg
conformance/web/: controller.phg  middleware.phg  rich-request-bags.out  rich-request-bags.phg  route-constraints.phg  router-attrs.phg  router.out  router.phg
docs/: ARCHITECTURE.md  EXTENSIONS-AUTHORING.md  EXTENSIONS.md  GA-CHECKLIST.md  HISTORY.md  INVARIANTS.md  MILESTONES.md
docs/adr/: 0001-no-shared-run-vm-ir.md  0004-single-file-brace-namespace-php.md  0005-offline-only-vendor.md
docs/plans/: 2026-06-16-examples-coverage.md  2026-06-16-m2-p3.5-hardening-roadmap.md  2026-06-16-m2-p5a-rc-shared-heap.md  2026-06-16-m2.5-phase1-build-linux-gnu.md  2026-06-17-m3-s2-null-safety.md  2026-06-17-v0.4.0-profiling-disasm.md  2026-06-18-m3-s3-lambdas-pipe.md  2026-06-18-m5-modules-packages.md  2026-06-18-m6-web-capabilities-research.md  2026-06-18-m8-php-import-design.md  2026-06-19-m7-correctness-closure.plan.md  2026-06-19-phorge-ga-roadmap.plan.md  2026-06-20-m-rt-rich-types.plan.md  2026-06-20-post-wave3-four-tracks.plan.md  2026-06-21-error-handling-and-traces.plan.md  2026-06-21-ga-direction-and-autonomy.plan.md  2026-06-21-m-mut.1-mutable-locals.plan.md  2026-06-21-m-mut.2-compound-assign.plan.md  2026-06-21-m-mut.3-condition-loops.plan.md  2026-06-21-m-mut.4-clone-with-get-hooks.plan.md  2026-06-21-roadmap-completeness-review.plan.md  2026-06-21-stack-traces-impl.plan.md  2026-06-21-visibility-modifiers-impl.plan.md  2026-06-21-visibility-modifiers.plan.md  2026-06-22-error-model-slice2.plan.md  2026-06-22-generic-enums.plan.md  2026-06-22-method-overloading.plan.md  2026-06-22-s6-multiple-inheritance.plan.md  2026-06-22-totality-cluster.plan.md  2026-06-23-decomposition-milestone.plan.md  2026-06-23-namespace-reshape-pascalcase.plan.md  2026-06-23-pattern-cluster.plan.md  2026-06-24-language-evolution-master.plan.md  2026-06-24-new-const-fieldinit.plan.md  2026-06-24-playground-wasm.plan.md  (+31 more)
editors/: README.md
examples/: README.md  fib.phg  grades.phg  hello.phg
outbox/: phorj-mail-0.eml
playground/: Cargo.toml  README.md
playground/src/: lib.rs
playground/web/: examples.js  gen_examples.py  index.html  main.js  style.css  worker.js
scripts/: microbench-gate.sh  microbench.sh  perf-gate.sh  size-baseline.txt  size-gate.sh  toolchain.env
selftest/: README.md  arithmetic.phg  faults.phg
src/: ast.rs  bundle.rs  checker.rs  chunk.rs  cli.rs  compiler.rs  dap.rs  debug.rs  diagnostic.rs  dispatch.rs  dump.rs  inspect.rs  interpreter.rs  json.rs  lexer.rs  lib.rs  limits.rs  loader.rs  main.rs  manifest.rs  mem.rs  native.rs  parser.rs  php_names.rs  phstr.rs  profile.rs  serve.rs  token.rs  transpile.rs  types.rs  value.rs  vendor.rs  vm.rs
src/ast/: classes.rs  (+9 more)
tests/: attribute_paths.rs  build.rs  build_php.rs  cli.rs  conformance.rs  database.rs  database_mysql.rs  database_postgres.rs  db.rs  db_mysql.rs  db_postgres.rs  debug.rs  differential.rs  filesystem.rs  fmt.rs  format.rs  fs.rs  http_client.rs  interop.rs  lexer_integration.rs  lift_roundtrip.rs  log.rs  mail.rs  parser_integration.rs  pm.rs  process.rs  program_integration.rs  project.rs  random.rs  run_integration.rs  runtime.rs  serve.rs  session.rs  stdin.rs  tokenizer_integration.rs  typecheck_integration.rs  vendor.rs
(+1029 files in other folders)
