[package]
name = "phorj"
# Pre-1.0; the version tracks milestone progress, not a release cadence. First tagged pre-release:
# 0.5.1-alpha.1 rolls up everything since the 0.4.0 internal mark — M3 + M-RT (full rich-type system),
# M5 (packages), M2.5 cross-OS `phg build`, M6 (web, partial), the pattern cluster, and the WASM
# playground. `-v`/`--version` reads this value via CARGO_PKG_VERSION.
version = "0.5.1-alpha.1"
edition = "2021"
# Single-sources the cross-stub registry base (M2.5 Phase 3a): the download client derives
# `{repository}/releases/download/v{version}/` as the default registry. `PHORJ_STUB_REGISTRY` overrides.
repository = "https://github.com/tmessaoudi-official/phorj"
# Cargo floor for the `[lints]` table below (stabilised in Cargo 1.74); older Cargo silently
# ignores `[lints]`, which would drop the warnings=deny / clippy=deny quality gate. The crate is
# developed and verified on the toolchain pinned in `rust-toolchain.toml`.
rust-version = "1.74"

[lib]
name = "phorj"
path = "src/lib.rs"

[[bin]]
name = "phg"
path = "src/main.rs"

# Phorj core is std-only. The exceptions are security-critical primitives where std has none and
# rolling-your-own is the anti-pattern: audited crypto, and a ReDoS-safe regex engine. Each is behind
# a feature so the WASM playground builds without it (docs/specs/2026-06-27-dependency-policy.md).
[features]
default = ["crypto", "regex", "signals", "green"]
crypto = ["dep:argon2"]
regex = ["dep:regex"]
# `phg serve` graceful shutdown (M6 W4 / S4.2): SIGINT/SIGTERM → drain in-flight → exit 0. Off for the
# WASM playground (no sockets, no signals). See docs/specs/2026-06-27-dependency-policy.md (3rd domain).
signals = ["dep:ctrlc"]
# Green-thread cooperative concurrency (M6 W4 / S4.3): `spawn` + channels run each task on a stackful
# coroutine driven by the shared `green::sched` scheduler. The coroutine primitive is `corosensei`
# (4th dependency) — std has no stackful-coroutine primitive and the only std-native path is hand-rolled
# `unsafe` stack-switching, which `corosensei` confines out of phorj's `#![forbid(unsafe_code)]` (the
# same ctrlc criterion). NATIVE-ONLY: corosensei does not compile on wasm32 (no native stack to switch),
# so the feature is off for the WASM playground, where the interpreter delegates task execution to the
# VM's frame-swap instead. See docs/specs/2026-06-29-m6-w4-green-threads-design.md §4b.
green = ["dep:corosensei"]

[dependencies]
# FIRST external dependency (RustCrypto, audited). Powers `Core.Crypto` (Argon2id password hashing) —
# a domain where rolling your own is the security anti-pattern and std has no equivalent. `std` enables
# the OS RNG (`OsRng`) for salt generation; feature-gated off for the playground.
argon2 = { version = "0.5", optional = true, features = ["std"] }

# FOURTH external dependency (Amanieu d'Antras — author of hashbrown/parking_lot, in the Rust nursery;
# stackful coroutines with miri-tested context switching). Powers green-thread task suspension (M6 W4):
# each `spawn`ned task runs on its own stack and yields at `recv`/`join`/`yield`. std has no
# stackful-coroutine primitive; the alternative is hand-rolled `unsafe` register/stack switching, which
# this crate confines outside phorj's `#![forbid(unsafe_code)]`. A low-level *primitive*, NOT an async
# runtime (tokio et al. stay disallowed). Native-only — wasm32 has no native stack to switch (verified:
# corosensei fails to compile there), so the dep is gated to non-wasm targets and the `green` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
corosensei = { version = "0.3", optional = true }

# SECOND external dependency (Rust project / BurntSushi, exhaustively fuzzed). Powers `Core.Regex` —
# a RE2-style finite-automaton engine with guaranteed linear-time matching (ReDoS-immune by
# construction, unlike PHP/PCRE backtracking). Regex over untrusted input is a security-critical
# parser; std has none; "never roll your own" applies. Feature-gated off for the playground.
regex = { version = "1", optional = true }

# THIRD external dependency (developer-authorized, 2026-06-29). Powers `phg serve` graceful shutdown
# (SIGINT/SIGTERM). std has NO signal API, and the only std-native alternative is a hand-rolled
# `unsafe` `sigaction` handler — which would pierce the crate's `#![forbid(unsafe_code)]`. `ctrlc`
# confines that unsafe to a tiny, widely-used, cross-platform crate, keeping phorj's own code
# unsafe-free. Feature-gated off for the playground. A narrowly-scoped 3rd domain (OS-signal handling)
# in docs/specs/2026-06-27-dependency-policy.md — NOT a general-purpose/convenience precedent.
ctrlc = { version = "3", optional = true, features = ["termination"] }

# Quality gate (M2 P3.5 Wave 0, Task 0.5): clippy-clean and warning-free become a *compile* gate,
# not just a CI nicety. Solo dev controls the toolchain, so the known fragility of denying warnings
# in the manifest (a newer rustc/clippy can introduce warnings that then fail the build) is accepted.
# Pedantic stays opt-in (not in `clippy::all`). `unsafe` is forbidden via `#![forbid(unsafe_code)]`
# on the crate roots.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# The WASM playground (`playground/`) is a separate workspace member so the core `phorj` crate above
# keeps its dependency surface to the four vetted, feature-gated crates (argon2, regex, ctrlc,
# corosensei) and `#![forbid(unsafe_code)]`. wasm-bindgen lives solely in that member, as a
# wasm32-only target dependency — see `playground/Cargo.toml`.
[workspace]
members = ["playground"]
