[package]
name = "phorj"
# Pre-1.0; the version tracks milestone progress, not a release cadence. First tagged pre-release:
# 0.5.1-alpha.1 rolls up everything since the 0.4.0 internal mark — M3 + M-RT (full rich-type system),
# M5 (packages), M2.5 cross-OS `phg build`, M6 (web, partial), the pattern cluster, and the WASM
# playground. `-v`/`--version` reads this value via CARGO_PKG_VERSION.
version = "0.5.1-alpha.1"
edition = "2021"
# Single-sources the cross-stub registry base (M2.5 Phase 3a): the download client derives
# `{repository}/releases/download/v{version}/` as the default registry. `PHORJ_STUB_REGISTRY` overrides.
repository = "https://github.com/tmessaoudi-official/phorj"
# Cargo floor for the `[lints]` table below (stabilised in Cargo 1.74); older Cargo silently
# ignores `[lints]`, which would drop the warnings=deny / clippy=deny quality gate. The crate is
# developed and verified on the toolchain pinned in `rust-toolchain.toml`.
rust-version = "1.82"

# Test/dev build-speed profile (perf, 2026-07-08). The test suite ran ~126s because EVERYTHING
# compiled at opt-level 0: memory-hard `argon2` verify alone took ~25s, and the workspace-code
# sweeps (Wadler formatter dogfood, both-backend example runner, std-only sha256) ran the
# interpreter/formatter unoptimized. Fix, per the canonical cargo idiom:
#   - deps at opt-level 2: argon2/cranelift/regex are near-never recompiled, so optimizing them is
#     essentially free on incremental builds and reclaims the KDF + codegen time outright;
#   - workspace at opt-level 1: a light tier that speeds the interpreter/VM/formatter dispatch loops
#     (the sweep bottleneck) at a modest incremental-compile cost.
# Behaviour is opt-level-invariant (byte-identity unaffected); `[profile.release]` is untouched, so the
# shipped binary and the correctness gate's release build are unchanged.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[lib]
name = "phorj"
path = "src/lib.rs"

[[bin]]
name = "phg"
path = "src/main.rs"

# Phorj core is std-only. The exceptions are security-critical primitives where std has none and
# rolling-your-own is the anti-pattern: audited crypto, and a ReDoS-safe regex engine. Each is behind
# a feature so the WASM playground builds without it (docs/specs/UNIFIED-SPEC.md#external-dependency-policy).
[features]
# `jit` is default (developer-ruled 2026-07-09): the shipped binary compiles hot functions to native
# code so `phg run` is fast out of the box (opt out with `phg run --no-jit`). Safe for the WASM
# playground, which builds with `default-features = false` (see playground/Cargo.toml) and whose
# Cranelift deps are non-wasm target-gated anyway. Build without native codegen via
# `--no-default-features` (re-add crypto/regex/signals/green as needed).
default = ["crypto", "regex", "signals", "green", "jit", "db"]
crypto = ["dep:argon2"]
regex = ["dep:regex"]
# `phg serve` graceful shutdown (M6 W4 / S4.2): SIGINT/SIGTERM → drain in-flight → exit 0. Off for the
# WASM playground (no sockets, no signals). See docs/specs/UNIFIED-SPEC.md#external-dependency-policy (3rd domain).
signals = ["dep:ctrlc"]
# Green-thread cooperative concurrency (M6 W4 / S4.3): `spawn` + channels run each task on a stackful
# coroutine driven by the shared `green::sched` scheduler. The coroutine primitive is `corosensei`
# (4th dependency) — std has no stackful-coroutine primitive and the only std-native path is hand-rolled
# `unsafe` stack-switching, which `corosensei` confines out of phorj's `#![forbid(unsafe_code)]` (the
# same ctrlc criterion). NATIVE-ONLY: corosensei does not compile on wasm32 (no native stack to switch),
# so the feature is off for the WASM playground, where the interpreter delegates task execution to the
# VM's frame-swap instead. See docs/specs/2026-06-29-m6-w4-green-threads-design.md §4b.
green = ["dep:corosensei"]
# Native codegen JIT backend (perf mandate G-8): Cranelift lowers hot bytecode functions to native
# machine code — the bytecode VM is ~28× slower than release-php+JIT on hot numeric loops, and no
# tuning under `#![forbid(unsafe_code)]` closes that (only native codegen does). OFF by default and
# OFF for wasm (no native JIT target). This is phorj's FIRST first-party `unsafe` (the
# finalize→transmute→fn-ptr call), confined to `src/jit/` behind a CI-enforced island — the crate
# roots relax from `forbid(unsafe_code)` to `deny(unsafe_code)` so that one module can carry a scoped
# `#![allow]`. 7th external-dependency domain — see docs/specs/UNIFIED-SPEC.md#external-dependency-policy.
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module"]
# Embedded SQL database primitive `Core.Db` (DEC-208, enhanced-PDO). Off by default and off for wasm
# (no native SQLite). rusqlite (8th external-dependency domain, admitted 2026-07-03 — UNIFIED-SPEC
# #external-dependency-policy Q1/Q2) links SQLite via its `bundled` feature (no system libsqlite3
# dependency). Its `unsafe` is SQLite C-FFI internal to the crate — phorj's own code stays unsafe-free.
# SPINE-QUARANTINED: Core.Db natives are `pure:false`, so `uses_impure_native` auto-excludes every
# `import Core.Db` example from the byte-identity differential (tested via the tests/db.rs fixture).
db = ["dep:rusqlite"]
# Postgres driver for `Core.Db` (DEC-208 slice I). Admits the SYNC `postgres` crate (native-protocol,
# no libpq/system dependency; TLS left off → no OpenSSL). `db-postgres` implies `db` (it plugs a driver
# into the shared multi-driver seam). The crate's async/tokio usage is its INTERNAL blocking-wrapper
# impl detail (feature-gated, non-default, non-wasm) — the phorj-facing API stays sync, per the
# dependency policy (SQL domain: SQLite+Postgres+MySQL sync). Off by default and off for wasm.
db-postgres = ["db", "dep:postgres"]
# MySQL/MariaDB driver for `Core.Db` (DEC-208 slice J). Admits the SYNC `mysql` crate
# (`minimal-rust`: pure-Rust wire protocol, no compression/TLS/chrono extras — the smallest surface).
# `db-mysql` implies `db` (same multi-driver seam as `db-postgres`). Off by default and off for wasm.
db-mysql = ["db", "dep:mysql"]
# Native mailer `Core.Mail` (DEC-223, twin-of-Db). Admits `lettre` (11th external-dependency domain):
# RFC-correct MIME/multipart, SMTP with optional auth, STARTTLS/implicit TLS via the already-admitted
# rustls, optional DKIM, and a BLOCKING SmtpTransport (no tokio at the phorj-facing API). Native-only
# (`E-TRANSPILE-MAIL` — PHP mail() has no auth/TLS and is header-injection-prone; no faithful map).
# Non-default, non-wasm; spine-quarantined (pure:false natives).
mail = ["dep:lettre"]
# `Core.HttpClient` (W3-2, the TOP-20 #2 parity blocker) — a SYNC HTTP/1.1 client over std
# TcpStream with `rustls` for https (the TLS domain admitted 2026-07-03 EXPLICITLY to gate this
# client) + `webpki-roots` (Mozilla trust anchors, no OS cert dependency). Native-only
# (`E-TRANSPILE-HTTPCLIENT` — live network I/O has no byte-identity mapping; a curl-mapping may
# lift this later, recorded). Non-default, non-wasm, spine-quarantined.
http-client = ["dep:rustls", "dep:webpki-roots"]
# Convenience: every admitted SQL driver at once.
db-all = ["db", "db-postgres", "db-mysql"]

[dependencies]
# FIRST external dependency (RustCrypto, audited). Powers `Core.Crypto` (Argon2id password hashing) —
# a domain where rolling your own is the security anti-pattern and std has no equivalent. `std` enables
# the OS RNG (`OsRng`) for salt generation; feature-gated off for the playground.
argon2 = { version = "0.5", optional = true, features = ["std"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"], optional = true }
webpki-roots = { version = "1.0.8", optional = true }
# FOURTH external dependency (Amanieu d'Antras — author of hashbrown/parking_lot, in the Rust nursery;
# stackful coroutines with miri-tested context switching). Powers green-thread task suspension (M6 W4):
# each `spawn`ned task runs on its own stack and yields at `recv`/`join`/`yield`. std has no
# stackful-coroutine primitive; the alternative is hand-rolled `unsafe` register/stack switching, which
# this crate confines outside phorj's `#![forbid(unsafe_code)]`. A low-level *primitive*, NOT an async
# runtime (tokio et al. stay disallowed). Native-only — wasm32 has no native stack to switch (verified:
# corosensei fails to compile there), so the dep is gated to non-wasm targets and the `green` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
corosensei = { version = "0.3", optional = true }

# ELEVENTH external-dependency domain (native mailer, DEC-223 developer-ruled 2026-07-15). `lettre`
# under a minimal feature set: blocking SMTP (NO tokio at the API), rustls TLS, RFC-correct MIME
# builder, DKIM, sendmail pipe. Its `unsafe`/async internals stay inside the dependency (the
# rusqlite/postgres criterion). Feature-gated (`mail`), non-default, non-wasm, spine-quarantined.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "dkim", "sendmail-transport"], optional = true }

# EIGHTH external-dependency domain (embedded SQL, admitted 2026-07-03). Powers the `Core.Db`
# enhanced-PDO primitive (DEC-208) over SQLite. `bundled` compiles SQLite from vendored C source, so
# there is no system-libsqlite3 build dependency. rusqlite's `unsafe` is the SQLite C-FFI boundary,
# internal to the crate (like argon2/corosensei/cranelift) — phorj's own crate stays unsafe-free.
# Native-only: no SQLite on wasm32. Feature-gated (`db`), spine-quarantined (Tier-3 fixture-tested).
rusqlite = { version = "0.40", optional = true, features = ["bundled"] }

# EIGHTH domain, second driver (Postgres, DEC-208 slice I). The SYNC `postgres` crate (sfackler) speaks
# the native Postgres wire protocol in pure Rust — NO libpq / system dependency, and with TLS left off
# it needs no OpenSSL. It is a thin BLOCKING wrapper over `tokio-postgres`, so tokio is pulled
# transitively as the crate's internal impl detail (feature-gated behind `db-postgres`, non-default,
# non-wasm); the phorj-facing driver API is fully sync. Its `unsafe` is confined to the dependency, like
# rusqlite — phorj's own crate stays unsafe-free. See UNIFIED-SPEC #external-dependency-policy (SQL domain).
postgres = { version = "0.19", optional = true }

# TENTH external-dependency domain (MySQL/MariaDB driver, DEC-229 AUTO-RULED 2026-07-15 — the slice-J
# twin of the postgres admission). The SYNC `mysql` crate under `minimal-rust`: pure-Rust native wire
# protocol, no system libmysqlclient, no TLS/compression/chrono extras pulled. Its `unsafe` stays
# internal to the dependency (the rusqlite/postgres criterion) — phorj's own crate stays unsafe-free.
# Feature-gated (`db-mysql`), non-default, non-wasm, spine-quarantined like every DB driver.
mysql = { version = "28.0.0", default-features = false, features = ["minimal-rust"], optional = true }

# SEVENTH external-dependency domain (native codegen, developer-authorized 2026-07-06). Cranelift
# (Bytecode Alliance — the wasmtime code generator, fuzzed + production-hardened) is the JIT backend
# for the G-8 perf mandate. Chosen over LLVM (heavyweight C++ build dependency, slow compiles) and
# over a C-transpile→rustc AOT (production-only — it would leave interactive `phg run` on the slow
# VM). Feature-gated (`jit`) and non-wasm (wasm32 has no native JIT target). Its
# finalize→transmute→fn-ptr call is phorj's first first-party `unsafe`, confined to `src/jit/` behind
# the CI `unsafe-island` gate. See docs/specs/UNIFIED-SPEC.md#external-dependency-policy.
cranelift = { version = "0.133", optional = true }
cranelift-jit = { version = "0.133", optional = true }
cranelift-module = { version = "0.133", optional = true }

# SECOND external dependency (Rust project / BurntSushi, exhaustively fuzzed). Powers `Core.Regex` —
# a RE2-style finite-automaton engine with guaranteed linear-time matching (ReDoS-immune by
# construction, unlike PHP/PCRE backtracking). Regex over untrusted input is a security-critical
# parser; std has none; "never roll your own" applies. Feature-gated off for the playground.
regex = { version = "1", optional = true }

# THIRD external dependency (developer-authorized, 2026-06-29). Powers `phg serve` graceful shutdown
# (SIGINT/SIGTERM). std has NO signal API, and the only std-native alternative is a hand-rolled
# `unsafe` `sigaction` handler — which would pierce the crate's `#![forbid(unsafe_code)]`. `ctrlc`
# confines that unsafe to a tiny, widely-used, cross-platform crate, keeping phorj's own code
# unsafe-free. Feature-gated off for the playground. A narrowly-scoped 3rd domain (OS-signal handling)
# in docs/specs/UNIFIED-SPEC.md#external-dependency-policy — NOT a general-purpose/convenience precedent.
ctrlc = { version = "3", optional = true, features = ["termination"] }

# Quality gate (M2 P3.5 Wave 0, Task 0.5): clippy-clean and warning-free become a *compile* gate,
# not just a CI nicety. Solo dev controls the toolchain, so the known fragility of denying warnings
# in the manifest (a newer rustc/clippy can introduce warnings that then fail the build) is accepted.
# Pedantic stays opt-in (not in `clippy::all`). `unsafe` is forbidden via `#![forbid(unsafe_code)]`
# on the crate roots.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

# The WASM playground (`playground/`) is a separate workspace member so the core `phorj` crate above
# keeps its dependency surface to the four vetted, feature-gated crates (argon2, regex, ctrlc,
# corosensei) and `#![forbid(unsafe_code)]`. wasm-bindgen lives solely in that member, as a
# wasm32-only target dependency — see `playground/Cargo.toml`.
[workspace]
members = ["playground"]
