[package]
name = "phorj-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
publish = false
description = "WASM bindings exposing the Phorj pipeline (run / runvm / transpile / check) to a browser playground."

[lib]
# `cdylib` for the wasm artifact; `rlib` so the wrapper logic can be unit-tested on the native target
# (the `*_json` functions are plain Rust — only the thin `#[wasm_bindgen]` exports are wasm32-gated).
crate-type = ["cdylib", "rlib"]

[dependencies]
# `default-features = false` keeps the audited-crypto crate (argon2) out of the WASM build — the
# playground stays tiny + browser-safe. This turns OFF `crypto` (argon2), `regex`, `signals`, and
# `green`, so `Core.Crypto` AND `Core.Regex` are absent here (a program importing either gets an
# unknown-module error) — `gen_examples.py` excludes both so no such example reaches the playground.
# To bring `guide/regex.phg` back, add `features = ["regex"]` below (regex compiles to wasm32) and
# rebuild the WASM. Every OTHER native is unaffected.
phorj = { path = "..", default-features = false }
# JSON assembly for the wrapper return values. Pulled only into this member, never the core crate.
serde_json = "1"

# wasm-bindgen is the project's only external crate and is confined to this member, AND to the wasm32
# target — native builds/tests of the wrapper logic do not depend on it at all.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
